--- a/ATO_Fraud_Detection.ipynb
+++ b/ATO_Fraud_Detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2qyLhTFb0w4WF7cZItVmC",
+      "authorship_tag": "ABX9TyNCkX01ebf/g4K7yP3q2Pub",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,29 +230,29 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "# --- (التصليح هنا: تم استيراد النموذج الصحيح) ---\n",
+        "# --- (Fix: Imported the correct model name) ---\n",
         "from sklearn.ensemble import IsolationForest\n",
         "from sklearn.metrics import f1_score, precision_score, recall_score, confusion_matrix\n",
         "import warnings\n",
         "\n",
-        "# تجاهل التحذيرات غير الهامة\n",
+        "# Ignore unimportant warnings\n",
         "warnings.filterwarnings('ignore', category=UserWarning)\n",
         "\n",
-        "print(\"--- بدء التنفيذ (الكود الأذكى: مع ميزة 'الوقت') ---\")\n",
-        "print(\"الهدف: تحسين F1-Score بإضافة 'متوسط وقت السحب' (avg_time_to_cash_out).\")\n",
+        "print(\"--- Execution Started (Smartest Code: With 'Time' Feature) ---\")\n",
+        "print(\"Objective: Improve F1-Score by adding 'avg_time_to_cash_out'.\")\n",
         "\n",
-        "# --- تحميل البيانات ---\n",
-        "# تأكدي أن هذا الاسم مطابق لاسم الملف الذي رفعتِه\n",
+        "# --- Load Data ---\n",
+        "# Make sure this name matches the file you uploaded\n",
         "file_path = 'PS_20174392719_1491204439457_log24.csv'\n",
         "try:\n",
         "    df = pd.read_csv(file_path)\n",
-        "    print(f\"تم تحميل الملف الكامل بنجاح ({len(df)} صف).\")\n",
+        "    print(f\"Successfully loaded the full file ({len(df)} rows).\")\n",
         "except Exception as e:\n",
-        "    print(f\"حدث خطأ أثناء تحميل البيانات: {e}\")\n",
+        "    print(f\"Error during data loading: {e}\")\n",
         "    exit()\n",
         "\n",
-        "# --- الخطوة 1: إنشاء \"العينة الذكية\" (Smart Sample) ---\n",
-        "print(\"\\n--- الخطوة 1: إنشاء 'العينة الذكية' ---\")\n",
+        "# --- Step 1: Create the 'Smart Sample' ---\n",
+        "print(\"\\n--- Step 1: Creating the 'Smart Sample' ---\")\n",
         "df_fraud = df[df['isFraud'] == 1]\n",
         "fraud_dest_ids = df_fraud['nameDest'].unique()\n",
         "fraud_orig_ids = df_fraud['nameOrig'].unique()\n",
@@ -265,13 +265,13 @@
         "sample_size = min(500000, len(df_normal))\n",
         "df_normal_sample = df_normal.sample(n=sample_size, random_state=42)\n",
         "df_smart_sample = pd.concat([df_fraud_lifecycle, df_normal_sample]).drop_duplicates(keep='first')\n",
-        "print(f\"تم إنشاء 'العينة الذكية' النهائية بحجم {len(df_smart_sample)} صف.\")\n",
+        "print(f\"The final 'Smart Sample' was created with {len(df_smart_sample)} rows.\")\n",
         "\n",
-        "# --- الخطوة 2: بناء البروفايلات السلوكية (بما في ذلك 'الوقت') ---\n",
-        "print(\"\\n--- الخطوة 2: بناء البروفايلات السلوكية (الكاملة) ---\")\n",
+        "# --- Step 2: Building Behavioral Profiles (Including 'Time') ---\n",
+        "print(\"\\n--- Step 2: Building Behavioral Profiles (Full) ---\")\n",
         "\n",
-        "# (أ) حساب الإحصائيات الأساسية (النسبة، عدد المرسلين)\n",
-        "print(\"   (أ) حساب نسبة السحب وعدد المرسلين...\")\n",
+        "# (a) Calculate basic stats (Ratio, Sender Count)\n",
+        "print(\"   (a) Calculating cash-out ratio and unique senders...\")\n",
         "df_received = df_smart_sample[df_smart_sample['type'].isin(['TRANSFER', 'CASH_IN'])]\n",
         "total_received = df_received.groupby('nameDest')['amount'].sum().to_dict()\n",
         "unique_senders = df_received.groupby('nameDest')['nameOrig'].nunique().to_dict()\n",
@@ -293,8 +293,8 @@
         "    })\n",
         "final_profiles = pd.DataFrame(profiles_list)\n",
         "\n",
-        "# (ب) حساب متوسط وقت السحب (الميزة الأذكى باستخدام 'step')\n",
-        "print(\"   (ب) حساب متوسط وقت السحب (avg_time_to_cash_out)...\")\n",
+        "# (b) Calculate average time to cash-out (the smartest feature using 'step')\n",
+        "print(\"   (b) Calculating average time to cash-out (avg_time_to_cash_out)...\")\n",
         "df_transfers = df_smart_sample[df_smart_sample['type'] == 'TRANSFER'][['step', 'nameDest']]\n",
         "df_cashouts = df_smart_sample[df_smart_sample['type'] == 'CASH_OUT'][['step', 'nameOrig']]\n",
         "df_transfers.rename(columns={'nameDest': 'user_id'}, inplace=True)\n",
@@ -306,7 +306,7 @@
         "user_log['prev_step'] = user_log.groupby('user_id')['step'].shift(1)\n",
         "user_log['prev_type'] = user_log.groupby('user_id')['tx_type'].shift(1)\n",
         "\n",
-        "# (تصحيح الخطأ السابق)\n",
+        "# (Correcting the previous error)\n",
         "user_log['time_since_transfer'] = user_log['step'] - user_log['prev_step']\n",
         "is_pattern = (user_log['tx_type'] == 'CASH_OUT') & (user_log['prev_type'] == 'TRANSFER_IN')\n",
         "pattern_times = user_log[is_pattern]\n",
@@ -314,19 +314,19 @@
         "avg_time_profile = pattern_times.groupby('user_id')['time_since_transfer'].mean().reset_index()\n",
         "avg_time_profile.columns = ['user_id', 'avg_time_to_cash_out']\n",
         "\n",
-        "# (ج) تجميع البروفايلات النهائية\n",
-        "print(\"   (ج) تجميع البروفايلات النهائية...\")\n",
+        "# (c) Aggregate final profiles\n",
+        "print(\"   (c) Aggregating final profiles...\")\n",
         "final_profiles = pd.merge(final_profiles, avg_time_profile, on='user_id', how='left')\n",
-        "# ملء القيم الفارغة: إذا لم يتبع المستخدم النمط (NaN)، نضع وقتاً طويلاً (مثل 999)\n",
+        "# Fill NaNs: If the user didn't follow the pattern, set a long time (e.g., 999)\n",
         "final_profiles['avg_time_to_cash_out'] = final_profiles['avg_time_to_cash_out'].fillna(999)\n",
-        "print(\"تم إنشاء البروفايلات السلوكية المعقدة بنجاح.\")\n",
+        "print(\"Complex behavioral profiles created successfully.\")\n",
         "\n",
-        "# --- الخطوة 3: دمج الميزات (Features) مع المعاملات ---\n",
-        "print(\"\\n--- الخطوة 3: دمج الميزات مع المعاملات ---\")\n",
+        "# --- Step 3: Merge Features with Transactions ---\n",
+        "print(\"\\n--- Step 3: Merging Features with Transactions ---\")\n",
         "df_model_data = pd.merge(df_smart_sample, final_profiles, left_on='nameDest', right_on='user_id', how='left')\n",
         "df_model_data = pd.merge(df_model_data, final_profiles, left_on='nameOrig', right_on='user_id', how='left', suffixes=('_dest', '_orig'))\n",
         "\n",
-        "# ملء القيم الفارغة (NaNs)\n",
+        "# Fill NaNs from the merge\n",
         "df_model_data['dest_cash_out_ratio_dest'] = df_model_data['dest_cash_out_ratio_dest'].fillna(0)\n",
         "df_model_data['dest_unique_senders_dest'] = df_model_data['dest_unique_senders_dest'].fillna(0)\n",
         "df_model_data['avg_time_to_cash_out_dest'] = df_model_data['avg_time_to_cash_out_dest'].fillna(999)\n",
@@ -334,38 +334,38 @@
         "df_model_data['dest_unique_senders_orig'] = df_model_data['dest_unique_senders_orig'].fillna(0)\n",
         "df_model_data['avg_time_to_cash_out_orig'] = df_model_data['avg_time_to_cash_out_orig'].fillna(999)\n",
         "\n",
-        "# --- الخطوة 4: تدريب نموذج (Unsupervised) ---\n",
-        "print(\"\\n--- الخطوة 4: تدريب نموذج Isolation Forest (بالميزات الجديدة) ---\")\n",
+        "# --- Step 4: Train Unsupervised Model ---\n",
+        "print(\"\\n--- Step 4: Training Isolation Forest Model (With New Features) ---\")\n",
         "\n",
         "features = [\n",
         "    'amount',\n",
         "    'dest_cash_out_ratio_dest',\n",
         "    'dest_unique_senders_dest',\n",
-        "    'avg_time_to_cash_out_dest', # <-- الميزة الجديدة (للمستلم)\n",
+        "    'avg_time_to_cash_out_dest', # <-- New feature (for recipient)\n",
         "    'dest_cash_out_ratio_orig',\n",
         "    'dest_unique_senders_orig',\n",
-        "    'avg_time_to_cash_out_orig'  # <-- الميزة الجديدة (للمرسل)\n",
+        "    'avg_time_to_cash_out_orig'  # <-- New feature (for sender)\n",
         "]\n",
         "df_model_data['type_encoded'] = df_model_data['type'].astype('category').cat.codes\n",
         "features.append('type_encoded')\n",
         "\n",
         "X = df_model_data[features]\n",
-        "y_true = df_model_data['isFraud'] # \"الإجابة الصحيحة\"\n",
+        "y_true = df_model_data['isFraud'] # The \"Correct Answer\" (for evaluation only)\n",
         "\n",
         "scaler = StandardScaler()\n",
         "X_scaled = scaler.fit_transform(X)\n",
         "\n",
         "contamination = y_true.mean()\n",
-        "print(f\"نسبة الاحتيال (Contamination) في العينة الذكية: {contamination:.2%}\")\n",
+        "print(f\"Fraud (Contamination) rate in the Smart Sample: {contamination:.2%}\")\n",
         "\n",
-        "# --- (هذا هو السطر الذي تم تصحيحه) ---\n",
+        "# --- (This is the corrected line) ---\n",
         "model = IsolationForest(contamination=contamination, random_state=42)\n",
         "model.fit(X_scaled)\n",
-        "predictions = model.predict(X_scaled) # -1 = شاذ, 1 = طبيعي\n",
-        "print(\"تم تدريب النموذج.\")\n",
+        "predictions = model.predict(X_scaled) # -1 = anomalous, 1 = normal\n",
+        "print(\"Model training complete.\")\n",
         "\n",
-        "# --- الخطوة 5: التقييم (المقارنة) ---\n",
-        "print(\"\\n--- الخطوة 5: تقييم النموذج (الدرجة الجديدة) ---\")\n",
+        "# --- Step 5: Evaluate the Model (Comparison) ---\n",
+        "print(\"\\n--- Step 5: Evaluating the Model (New Score) ---\")\n",
         "\n",
         "y_pred = [1 if p == -1 else 0 for p in predictions]\n",
         "f1 = f1_score(y_true, y_pred)\n",
@@ -373,56 +373,56 @@
         "recall = recall_score(y_true, y_pred)\n",
         "cm = confusion_matrix(y_true, y_pred)\n",
         "\n",
-        "print(f\"Precision (الدقة): {precision:.2%}\")\n",
-        "print(f\"Recall (قوة الالتقاط): {recall:.2%}\")\n",
-        "print(f\"F1-Score (الدرجة النهائية الجديدة): {f1:.2%}\")\n",
-        "print(\"\\nConfusion Matrix (مصفوفة الأخطاء):\")\n",
+        "print(f\"Precision: {precision:.2%}\")\n",
+        "print(f\"Recall: {recall:.2%}\")\n",
+        "print(f\"F1-Score (New Final Score): {f1:.2%}\")\n",
+        "print(\"\\nConfusion Matrix:\")\n",
         "print(cm)\n",
         "\n",
-        "print(\"\\n--- اكتمل الكود الأذكى ---\")"
+        "print(\"\\n--- Smartest Code Execution Complete ---\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZnupagTnpQYT",
-        "outputId": "826d5e9c-cbd3-4ce6-f83a-28521721b17e"
+        "outputId": "91c15809-84b9-4acf-8f56-f1ae62f617f4"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- بدء التنفيذ (الكود الأذكى: مع ميزة 'الوقت') ---\n",
-            "الهدف: تحسين F1-Score بإضافة 'متوسط وقت السحب' (avg_time_to_cash_out).\n",
-            "تم تحميل الملف الكامل بنجاح (1048575 صف).\n",
+            "--- Execution Started (Smartest Code: With 'Time' Feature) ---\n",
+            "Objective: Improve F1-Score by adding 'avg_time_to_cash_out'.\n",
+            "Successfully loaded the full file (1048575 rows).\n",
             "\n",
-            "--- الخطوة 1: إنشاء 'العينة الذكية' ---\n",
-            "تم إنشاء 'العينة الذكية' النهائية بحجم 504964 صف.\n",
+            "--- Step 1: Creating the 'Smart Sample' ---\n",
+            "The final 'Smart Sample' was created with 504964 rows.\n",
             "\n",
-            "--- الخطوة 2: بناء البروفايلات السلوكية (الكاملة) ---\n",
-            "   (أ) حساب نسبة السحب وعدد المرسلين...\n",
-            "   (ب) حساب متوسط وقت السحب (avg_time_to_cash_out)...\n",
-            "   (ج) تجميع البروفايلات النهائية...\n",
-            "تم إنشاء البروفايلات السلوكية المعقدة بنجاح.\n",
+            "--- Step 2: Building Behavioral Profiles (Full) ---\n",
+            "   (a) Calculating cash-out ratio and unique senders...\n",
+            "   (b) Calculating average time to cash-out (avg_time_to_cash_out)...\n",
+            "   (c) Aggregating final profiles...\n",
+            "Complex behavioral profiles created successfully.\n",
             "\n",
-            "--- الخطوة 3: دمج الميزات مع المعاملات ---\n",
+            "--- Step 3: Merging Features with Transactions ---\n",
             "\n",
-            "--- الخطوة 4: تدريب نموذج Isolation Forest (بالميزات الجديدة) ---\n",
-            "نسبة الاحتيال (Contamination) في العينة الذكية: 0.23%\n",
-            "تم تدريب النموذج.\n",
+            "--- Step 4: Training Isolation Forest Model (With New Features) ---\n",
+            "Fraud (Contamination) rate in the Smart Sample: 0.23%\n",
+            "Model training complete.\n",
             "\n",
-            "--- الخطوة 5: تقييم النموذج (الدرجة الجديدة) ---\n",
-            "Precision (الدقة): 3.13%\n",
-            "Recall (قوة الالتقاط): 3.06%\n",
-            "F1-Score (الدرجة النهائية الجديدة): 3.10%\n",
+            "--- Step 5: Evaluating the Model (New Score) ---\n",
+            "Precision: 3.13%\n",
+            "Recall: 3.06%\n",
+            "F1-Score (New Final Score): 3.10%\n",
             "\n",
-            "Confusion Matrix (مصفوفة الأخطاء):\n",
+            "Confusion Matrix:\n",
             "[[502740   1082]\n",
             " [  1107     35]]\n",
             "\n",
-            "--- اكتمل الكود الأذكى ---\n"
+            "--- Smartest Code Execution Complete ---\n"
           ]
         }
       ]
