--- a/Unsupervised_LOF_Model.ipynb
+++ b/Unsupervised_LOF_Model.ipynb
@@ -1,24 +1,114 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyM6YtYaRpSKBLWz1FbE0PQa",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AsmaaYassinDev/Behavioural-Anomaly-Detection-for-ATO-Fraud/blob/main/Unsupervised_LOF_Model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H7gfyRKzDKYX",
+        "outputId": "78350a9d-baa1-449d-b21f-dcdff09a149d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4jjau-qJ7CVR",
+        "outputId": "ceb8e48b-314b-4b52-e059-cca2570e66f6"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Execution Started (Improved LOF) ---\n",
+            "Objective: Use LOF with full behavioral + engineered features.\n",
+            "Successfully loaded the full file (6362620 rows).\n",
+            "\n",
+            "--- Step 1: Creating the 'Smart Sample' ---\n",
+            "The final 'Smart Sample' was created with 561154 rows.\n",
+            "\n",
+            "--- Step 2: Building Behavioral Profiles ---\n",
+            "Behavioral profiles created successfully.\n",
+            "\n",
+            "--- Step 3: Merging Features with Transactions ---\n",
+            "\n",
+            "--- Step 4: Training Local Outlier Factor (LOF) Model ---\n",
+            "Fraud (Contamination) rate in the Smart Sample: 1.46%\n",
+            "Model training complete.\n",
+            "\n",
+            "--- Step 5: Evaluating the LOF Model ---\n",
+            "Precision: 4.94%\n",
+            "Recall: 4.94%\n",
+            "F1-Score (Final score for LOF): 4.94%\n",
+            "\n",
+            "Confusion Matrix:\n",
+            "[[545134   7807]\n",
+            " [  7807    406]]\n",
+            "\n",
+            "--- LOF Code Execution Complete ---\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "# --- (Change: We will use LOF) ---\n",
         "from sklearn.neighbors import LocalOutlierFactor\n",
         "from sklearn.metrics import f1_score, precision_score, recall_score, confusion_matrix\n",
         "import warnings\n",
         "\n",
-        "# Ignore unimportant warnings\n",
         "warnings.filterwarnings('ignore', category=UserWarning)\n",
         "\n",
-        "print(\"--- Execution Started (Comparison with LOF) ---\")\n",
-        "print(\"Objective: Test LOF's performance on the same behavioral features.\")\n",
+        "print(\"--- Execution Started (Improved LOF) ---\")\n",
+        "print(\"Objective: Use LOF with full behavioral + engineered features.\")\n",
         "\n",
         "# --- Load Data ---\n",
-        "file_path = 'PS_20174392719_1491204439457_log24.csv'\n",
+        "file_path = '/content/drive/My Drive/Colab_Data/PS_20174392719_1491204439457_log.csv'\n",
         "try:\n",
         "    df = pd.read_csv(file_path)\n",
         "    print(f\"Successfully loaded the full file ({len(df)} rows).\")\n",
@@ -126,60 +216,7 @@
         "print(cm)\n",
         "\n",
         "print(\"\\n--- LOF Code Execution Complete ---\")"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--- Execution Started (Comparison with LOF) ---\n",
-            "Objective: Test LOF's performance on the same behavioral features.\n",
-            "Successfully loaded the full file (1048575 rows).\n",
-            "\n",
-            "--- Step 1: Creating the 'Smart Sample' ---\n",
-            "The final 'Smart Sample' was created with 504964 rows.\n",
-            "\n",
-            "--- Step 2: Building Behavioral Profiles ---\n",
-            "Behavioral profiles created successfully.\n",
-            "\n",
-            "--- Step 3: Merging Features with Transactions ---\n",
-            "\n",
-            "--- Step 4: Training Local Outlier Factor (LOF) Model ---\n",
-            "Fraud (Contamination) rate in the Smart Sample: 0.23%\n",
-            "Model training complete.\n",
-            "\n",
-            "--- Step 5: Evaluating the LOF Model ---\n",
-            "Precision: 3.24%\n",
-            "Recall: 3.24%\n",
-            "F1-Score (Final score for LOF): 3.24%\n",
-            "\n",
-            "Confusion Matrix:\n",
-            "[[502717   1105]\n",
-            " [  1105     37]]\n",
-            "\n",
-            "--- LOF Code Execution Complete ---\n"
-          ]
-        }
-      ],
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KnZsCKqZIsSg",
-        "outputId": "a7f7b3bc-9f4d-4df7-98a8-b96f7aae586b"
-      }
+      ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
