--- a/Supervised_Fraud_Model_(RandomForest)_Improved.ipynb
+++ b/Supervised_Fraud_Model_(RandomForest)_Improved.ipynb
@@ -21,9 +21,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "agM4MsRZq92G",
-        "outputId": "86d6cda6-3194-4a96-b684-78f0b8251d09"
+        "outputId": "9c34189f-f958-494e-e963-d05f3c60d946"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,16 +107,26 @@
         "df_model_data['balance_diff_dest'] = df_model_data['newbalanceDest'] - df_model_data['oldbalanceDest']\n",
         "df_model_data['type_encoded'] = df_model_data['type'].astype('category').cat.codes\n",
         "\n",
+        "# Time-based features\n",
+        "df_model_data['hour'] = df_model_data['step'] % 24\n",
+        "df_model_data['is_night'] = df_model_data['hour'].apply(lambda x: 1 if x < 6 or x > 22 else 0)\n",
+        "df_model_data['is_working_hour'] = df_model_data['hour'].apply(lambda x: 1 if 8 <= x <= 17 else 0)\n",
+        "df_model_data['is_weekend'] = df_model_data['step'].apply(lambda x: 1 if (x // 24) % 7 in [5, 6] else 0)\n",
+        "\n",
         "# --- Prepare Final Dataset ---\n",
         "selected_features = [\n",
         "    'amount',\n",
         "    'type_encoded',\n",
-        "    'dest_cash_out_ratio_dest',\n",
+        "    'balance_diff_orig',\n",
+        "    'balance_diff_dest',\n",
+        "     'dest_cash_out_ratio_dest',\n",
         "    'dest_unique_senders_dest',\n",
         "    'dest_cash_out_ratio_orig',\n",
         "    'dest_unique_senders_orig',\n",
-        "    'balance_diff_orig',\n",
-        "    'balance_diff_dest'\n",
+        "    'hour',\n",
+        "    'is_night',\n",
+        "    'is_working_hour',\n",
+        "    'is_weekend'\n",
         "]\n",
         "df_model_data = df_model_data.dropna(subset=['isFraud'])\n",
         "X = df_model_data[selected_features]\n",
@@ -152,8 +162,7 @@
         "# Feature Importance\n",
         "importance = pd.Series(model.feature_importances_, index=selected_features).sort_values(ascending=False)\n",
         "print(\"\\n--- Feature Importance ---\")\n",
-        "print(importance)\n",
-        "\n"
+        "print(importance)"
       ],
       "outputs": [
         {
@@ -174,33 +183,33 @@
             "--- Training Random Forest Classifier ---\n",
             "\n",
             "--- Random Forest Results After Feature Selection ---\n",
-            "Precision: 87.79%\n",
-            "Recall: 75.28%\n",
-            "F1-Score: 81.06%\n",
+            "Precision: 92.30%\n",
+            "Recall: 81.21%\n",
+            "F1-Score: 86.40%\n",
             "Confusion Matrix:\n",
-            "[[165625    258]\n",
-            " [   609   1855]]\n",
+            "[[165716    167]\n",
+            " [   463   2001]]\n",
             "\n",
             "--- Feature Importance ---\n",
-            "balance_diff_orig           0.449018\n",
-            "balance_diff_dest           0.157517\n",
-            "amount                      0.155614\n",
-            "type_encoded                0.147306\n",
-            "dest_unique_senders_dest    0.054703\n",
-            "dest_cash_out_ratio_orig    0.035736\n",
-            "dest_cash_out_ratio_dest    0.000093\n",
-            "dest_unique_senders_orig    0.000013\n",
+            "balance_diff_orig    0.502474\n",
+            "balance_diff_dest    0.138697\n",
+            "type_encoded         0.130670\n",
+            "amount               0.129783\n",
+            "hour                 0.074846\n",
+            "is_night             0.018416\n",
+            "is_working_hour      0.003359\n",
+            "is_weekend           0.001755\n",
             "dtype: float64\n"
           ]
         }
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vN_IwceT2_AK",
-        "outputId": "00438631-3490-4db5-beda-dd5b40e96f84"
+        "outputId": "05254f62-f1e3-41b4-af1f-d80fde47d3fe"
       }
     }
   ],
