--- a/train_proposed_model_py_py.ipynb
+++ b/train_proposed_model_py_py.ipynb
@@ -97,7 +97,7 @@
         "df = df.drop(columns=df.nunique()[df.nunique() == 1].index)\n",
         "\n",
         "# B. Imputation (Basic for Feature Engineering)\n",
-        "# We track what was missing for the UID step later\n",
+        "# track what was missing for the UID step later\n",
         "for col in df.select_dtypes(include=['object']).columns: df[col] = df[col].fillna('Unknown')\n",
         "for col in df.select_dtypes(exclude=['object']).columns: df[col] = df[col].fillna(-1)\n",
         "\n",
@@ -138,7 +138,7 @@
         "# 4. Final Sanity Check on UID\n",
         "df['UID'] = LabelEncoder().fit_transform(df['UID'])\n",
         "\n",
-        "# Encode the remaining object columns we skipped earlier\n",
+        "# Encode the remaining object columns, skipped earlier\n",
         "for col in ['card1', 'addr1', 'P_emaildomain']:\n",
         "    if df[col].dtype == 'object':\n",
         "         df[col] = LabelEncoder().fit_transform(df[col].astype(str))\n",
@@ -256,7 +256,7 @@
         "    for i in range(n_bootstrap):\n",
         "        indices = rng.choice(len(y_true), len(y_true), replace=True)\n",
         "        # Handle zero division implicitly by relying on implementation or small epsilon if needed\n",
-        "        # For simplicity here we assume non-empty sets\n",
+        "        # For simplicity here  assume non-empty sets\n",
         "        p = precision_score(y_true.iloc[indices], y_pred[indices], zero_division=0)\n",
         "        r = recall_score(y_true.iloc[indices], y_pred[indices], zero_division=0)\n",
         "        f1 = f1_score(y_true.iloc[indices], y_pred[indices], zero_division=0)\n",
