--- a/train_logistic_baseline_py.ipynb
+++ b/train_logistic_baseline_py.ipynb
@@ -626,7 +626,7 @@
         "\n",
         "# 1. Extract Coefficients\n",
         "# Logistic Regression coefficients indicate the direction and strength of the relationship\n",
-        "# We take the absolute value to determine \"Importance\" regardless of direction (+ or -)\n",
+        "# take the absolute value to determine \"Importance\" regardless of direction (+ or -)\n",
         "coeffs = np.abs(lr_model.coef_[0])\n",
         "\n",
         "# Create DataFrame\n",
