Add Feature Ranking code

--- a/train_proposed_model_tuned.ipynb
+++ b/train_proposed_model_tuned.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOV9nDCZyzZisKoHVI6IZCv",
+      "authorship_tag": "ABX9TyNrum8k1nbsEeUmUNz4IEPY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1035,6 +1035,106 @@
         "    else:\n",
         "        # If not used (Gain = 0), print Not Used\n",
         "        print(f\"{feat:<25} | Not Used\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ==========================================================\n",
+        "#  VALIDATION: CHECKING FEATURES RANK\n",
+        "# ==========================================================\n",
+        "import pandas as pd\n",
+        "\n",
+        "# 1. Extract Feature Importance\n",
+        "#  ask the trained XGBoost model: \"Which columns helped to learn the most?\"\n",
+        "# 'gain' measures the average reduction in uncertainty (entropy) brought by a feature.\n",
+        "importance_dict = xgb_model.get_booster().get_score(importance_type='gain')\n",
+        "\n",
+        "# Convert the raw dictionary into a clean, sorted DataFrame\n",
+        "imp_df = pd.DataFrame({\n",
+        "    'Feature': list(importance_dict.keys()),\n",
+        "    'Gain': list(importance_dict.values())\n",
+        "}).sort_values(by='Gain', ascending=False).reset_index(drop=True)\n",
+        "\n",
+        "# Add a specific Rank number (1st, 2nd, 3rd...) for easy comparison\n",
+        "imp_df['Rank'] = imp_df.index + 1\n",
+        "\n",
+        "# 2. Define  Engineered Features\n",
+        "# List the specific variables created during Section 2 (Feature Engineering)\n",
+        "# track exactly how these performed compared to the raw data.\n",
+        "my_features = [\n",
+        "    'User_Trans_Count',         # Velocity (How fast are they buying?)\n",
+        "    'Amt_Deviation',            # Contextual Spending (Is this amount normal for them?)\n",
+        "    'Time_Behavior_Deviation',  # Contextual Timing (Is this time normal for them?)\n",
+        "    'User_Mean_Amt',            # User Habit (Their average spend)\n",
+        "    'User_Hour_Mean',           # User Context (Their average spend at this hour)\n",
+        "    'hour',                     # Temporal (Hour of day)\n",
+        "    'day'                       # Temporal (Day of month - if created)\n",
+        "]\n",
+        "\n",
+        "print(f\"Total Features in Model: {len(imp_df)}\")\n",
+        "print(\"\\n--- 📊 RANKING OF ENGINEERED FEATURES 📊 ---\")\n",
+        "print(f\"{'Feature Name':<25} | {'Rank':<5} | {'Gain Score':<10} | {'Status'}\")\n",
+        "print(\"-\" * 60)\n",
+        "\n",
+        "found_features = []\n",
+        "for feat in my_features:\n",
+        "    # Check if the feature was actually used by the model (some useless features are dropped)\n",
+        "    if feat in imp_df['Feature'].values:\n",
+        "        # Extract the specific row for this feature\n",
+        "        row = imp_df[imp_df['Feature'] == feat].iloc[0]\n",
+        "        rank = int(row['Rank'])\n",
+        "        gain = row['Gain']\n",
+        "\n",
+        "        # Thesis Interpretation Status:\n",
+        "        # Categorize the feature based on its rank to give a clear verdict for the defense.\n",
+        "        if rank <= 20: status = \"🌟 STAR (Top 20)\"         # High Impact: Critical to the model\n",
+        "        elif rank <= 50: status = \"✅ STRONG (Core)\"        # Good Impact: Consistently useful\n",
+        "        elif rank <= 150: status = \"🔹 SUPPORTIVE (Useful)\" # Minor Impact: Helps in edge cases\n",
+        "        else: status = \"🔸 WEAK (Shadowed)\"                 # Low Impact: Barely used\n",
+        "\n",
+        "        print(f\"{feat:<25} | #{rank:<4} | {gain:<10.2f} | {status}\")\n",
+        "        found_features.append(feat)\n",
+        "    else:\n",
+        "        # If the feature isn't in the list, the model ignored it completely (Gain = 0)\n",
+        "        print(f\"{feat:<25} | ----  | 0.00       | ❌ NOT USED\")\n",
+        "\n",
+        "# 3. Quick Stats for Discussion\n",
+        "# Compare  features against the absolute best feature in the dataset\n",
+        "top_feat = imp_df.iloc[0]\n",
+        "print(\"\\n--- 🏆 COMPARISON WITH #1 FEATURE ---\")\n",
+        "print(f\"Top Feature is: {top_feat['Feature']} (Gain: {top_feat['Gain']:.2f})\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BYrRlXKsrrqb",
+        "outputId": "e5f7d327-c7f3-4f7f-c48c-62dd5cb6a6b6"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total Features in Model: 417\n",
+            "\n",
+            "--- 📊 RANKING OF ENGINEERED FEATURES 📊 ---\n",
+            "Feature Name              | Rank  | Gain Score | Status\n",
+            "------------------------------------------------------------\n",
+            "User_Trans_Count          | #139  | 79.60      | 🔹 SUPPORTIVE (Useful)\n",
+            "Amt_Deviation             | #204  | 59.70      | 🔸 WEAK (Shadowed)\n",
+            "Time_Behavior_Deviation   | #202  | 60.17      | 🔸 WEAK (Shadowed)\n",
+            "User_Mean_Amt             | ----  | 0.00       | ❌ NOT USED\n",
+            "User_Hour_Mean            | ----  | 0.00       | ❌ NOT USED\n",
+            "hour                      | #205  | 59.27      | 🔸 WEAK (Shadowed)\n",
+            "day                       | ----  | 0.00       | ❌ NOT USED\n",
+            "\n",
+            "--- 🏆 COMPARISON WITH #1 FEATURE ---\n",
+            "Top Feature is: V258 (Gain: 5172.28)\n"
+          ]
+        }
       ]
     }
   ]
