--- a/train_proposed_model_py_py.ipynb
+++ b/train_proposed_model_py_py.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNLMA9M3zqxt2dgHZ/j/Z6b",
+      "authorship_tag": "ABX9TyNotsyzRuUlDmbB3qrO1CrE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,6 +162,7 @@
         "# 2. [df.nunique() == 1] filters for columns where that count is exactly 1.\n",
         "# 3. .index retrieves the names of those useless columns.\n",
         "# 4. df.drop() removes them to save memory and reduce noise.\n",
+        "# If a column has only 1 unique value (e.g., everyone is from the same country),\n",
         "df = df.drop(columns=df.nunique()[df.nunique() == 1].index)\n",
         "\n",
         "\n",
@@ -773,7 +774,7 @@
         "id": "gRegHNkIyawt",
         "outputId": "01b5e5a9-79d3-47f0-fee1-5c53f2afe06e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1325,7 @@
         "id": "eMd1frzFhG9Y",
         "outputId": "55f499a7-1670-4d08-973e-b27490bc834d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
