--- a/train_proposed_model_py_py.ipynb
+++ b/train_proposed_model_py_py.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNotsyzRuUlDmbB3qrO1CrE",
+      "authorship_tag": "ABX9TyNVNOP0cMzMPSNDygTjHCCQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -329,7 +329,7 @@
         "#    Formula: (Total Rows - Unique Users) / Total Rows\n",
         "#    Meaning: Describes the 'Compression Rate' of the dataset.\n",
         "#    - Low %: Most users appear only once (Low value for history).\n",
-        "#    - High %: Users appear repeatedly (High value for history tracking).\n",
+        "#    - High %: Users appear repeatedly (High value for history tracking). // Repeat visits so good for knowing the habits\n",
         "print(f\"Unique UIDs: {unique_uids:,} (Efficiency: {(total_transactions-unique_uids)/total_transactions:.2%})\")\n",
         "\n",
         "print(f\"\\n--- JUSTIFICATION FOR COMPOSITE UID (vs Card1 alone) ---\")\n",
